--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,13 @@
     <title>Мой сайт</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../../../WebstormProjects/HomeWork V8.4/css/style.css">
 </head>
 <body>
 <header class="content_block">
     <article class="container">
         <div class="wrapper">
+
             <section class="item_header">
                 <img src="../assets/icons/1.png" alt="pencil">
                 <h4>Contrary to popular</h4>
@@ -36,15 +38,14 @@
     <article class="container_main">
         <div class="wrapper_main">
 
-
-            <section class="item_main">
+            <section class="item_icon">
                 <h2>The Shopping cart</h2>
                 <img  src="../assets/icons/4.png" alt="basket">
 
             </section>
-            <section class="item_main">
+            <section class="item_text">
                 <h3>Some Bullet text here</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam architecto at atque dignissimos eligendi et fugiat magnam maiores neque nisi non odit, officiis quia quis quos reiciendis repellat reprehenderit!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam architecto at atque dignissimos eligendi et fugiat magnam maiores neque nisi non odit, officiis quia quis quos reiciendis repellat reprehenderit! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
             </section>
         </div>
@@ -54,3 +55,4 @@
 <script src="../js/common.js"></script>
 </body>
 </html>
+
